# Xpersona-Search

./: .env.example  .gitignore  .tmp-webview-script.js  .vercelignore  Binary IDE Plan.md  Chrome Browser Extension.md  HF_ROUTER_IMPLEMENTATION_SUMMARY.md  Streaming Binary IDE Plan.md  XPERSONA AGENT MYSPACE.MD  XPERSONA ANS PLAN1.MD  XPERSONA ANS.MD  XPERSONA SEARCH.MD  XPERSONA-GRAPH.md  XPERSONA-PILLAR-3.MD  XPERSONA-POLISH1.MD  XPERSONA-RELIABILITY.MD  Xpersona-Growth-Plan1.md  binary-autonomy-benchmarks.browser-check.json  binary-autonomy-benchmarks.full-gate.json  binary-autonomy-benchmarks.full-gate.post-hotfix.json  binary-autonomy-benchmarks.full-gate.post-hotfix2.json  binary-autonomy-benchmarks.hotfix-check.json  binary-autonomy-benchmarks.hotfix-check2.json  binary-autonomy-benchmarks.hotfix-check3.json  binary-autonomy-benchmarks.hotfix-check4.json  binary-autonomy-benchmarks.hotfix-check5.json  binary-autonomy-benchmarks.hotfix-check6.json  binary-autonomy-benchmarks.hotfix-check7.json  binary-autonomy-benchmarks.json  binary-autonomy-benchmarks.lane-check.json  binary-autonomy-benchmarks.lane-check2.json  binary-autonomy-benchmarks.lane-check3.json  binary-autonomy-benchmarks.single-lane.json  binary-autonomy-benchmarks.single-lane2.json  binary-autonomy-benchmarks.single-lane3.json  binary-autonomy-scorecard.browser-check.json  binary-autonomy-scorecard.full-gate.json  binary-autonomy-scorecard.full-gate.post-hotfix.json  binary-autonomy-scorecard.full-gate.post-hotfix2.json  binary-autonomy-scorecard.hotfix-check.json  (+164 more)
playground_ai/python_cli/: README.md  (+1 more)
(+1938 files in other folders)
